--- a/src/TravelWeb/package.json
+++ b/src/TravelWeb/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview --host 0.0.0.0 --port 3000"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "sweetalert2": "^11.14.5"
+    "sweetalert2": "^11.14.5",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
